--- a/index.html
+++ b/index.html
@@ -40,14 +40,32 @@
         <header class="masthead">
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Jhon Deiber Diaz Parra</h1>
-                        <hr class="divider" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">About me</a>
-                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="align-self-end">
+                                <h1 class="text-white font-weight-bold">Jhon Deiber Diaz Parra</h1>
+                                <hr class="divider" />
+                            </div>
+                            <div class="align-self-baseline">
+                                <h2 class="text-white text-center"> <span class="typing"></span></h2>
+                                <div class="terms justify-content-center">
+                                    <p class="text-white text-center bi-inbox">- jhondeiberd@gmail.com</p>
+                                    <p class="text-white text-center bi-map">- Montréal QC, Canada</p>
+                                    <p class="text-white text-center bi-phone">- (514)-3461672</p>
+                                </div>
+
+                                <div class="terms justify-content-center">
+                                    <a class="text-white bi bi-linkedin" href="https://www.linkedin.com/in/jhondeiberd/"> | </a>
+                                    <a class="text-white bi-github" href="https://www.github.com/jhondeiberd/"></a>
+                                </div>
+                            </div>
+                            <div class="align-self-baseline">
+                                <a class="btn btn-primary btn-xl" href="#about">About me</a>
+                            </div>
+                        </div>
+                        <div class="col col-lg-2">
+                            <img class="avatar" src="assets/img/Profile.jpg" alt="..." />
+                        </div>
                 </div>
             </div>
         </header>
@@ -208,13 +226,6 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                     <div class="col-lg-6">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
@@ -281,11 +292,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         <script src="particles.js"></script>
     </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 </html>
