--- a/index.html
+++ b/index.html
@@ -54,11 +54,38 @@
                                     <p class="text-white text-center bi-phone">- (514)-3461672</p>
                                 </div>
 
-                                <div class="terms justify-content-center">
-                                    <a class="text-white bi bi-linkedin" href="https://www.linkedin.com/in/jhondeiberd/"> | </a>
+                                <div class="h2 terms justify-content-center">
+                                    <a class="text-white bi bi-linkedin" href="https://www.linkedin.com/in/jhondeiberd/"> </a>
                                     <a class="text-white bi-github" href="https://www.github.com/jhondeiberd/"></a>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <p class="text-white text-center">Englis</p>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                      </div>
+                                    <p class="text-white text-center">Professional working proficiency</p>
+                                </div>
+                                <div class="col">
+                                    <p class="text-white text-center">French</p>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                      </div>
+                                    <p class="text-white text-center">Elementary proficiency</p>
+                                </div>
+                                <div class="col">
+                                    <p class="text-white text-center">Spanish</p>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                      </div>
+                                    <p class="text-white text-center">Native or bilingual proficiency</p>
+                                </div>
+                            </div>
+                            
+            
+
                             <div class="align-self-baseline">
                                 <a class="btn btn-primary btn-xl" href="#about">About me</a>
                             </div>
@@ -143,6 +170,9 @@
                             <p class="text-muted mb-0">ERP Microsoft Dynamics<br></br>WMS Arcante<br></br>PLM Porini<br></br>ICG POS</p>
                         </div>
                     </div>
+                </div>
+                <div class="align-self-baseline text-center">
+                    <a class="btn btn-primary btn-xl" href="#education">Training and certifications</a>
                 </div>
             </div>
         </section>
