--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
             </div>
         </section>
         <!-- Portfolio-->
-        <div id="project">
+        <div id="portfolio">
+            <h2 class="text-center mt-0">Technical Skills</h2>
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-6 col-sm-6">
                         <a class="portfolio-box" href="assets/img/projects/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -189,7 +190,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-6 col-sm-6">
                         <a class="portfolio-box" href="assets/img/projects/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -198,16 +199,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/3.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/projects/thumbnails/3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
+
+                    <div class="col-lg-6 col-sm-6">
                         <a class="portfolio-box" href="assets/img/projects/fullsize/4.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -216,19 +209,10 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-6 col-sm-6">
                         <a class="portfolio-box" href="assets/img/projects/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/6.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/projects/thumbnails/6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
                             </div>
@@ -244,6 +228,8 @@
                 <a class="btn btn-light btn-xl" href="www.linkedin.com/in/jhondeiberd">Download Now!</a>
             </div>
         </section>
+
+
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container px-4 px-lg-5">
