--- a/index.html
+++ b/index.html
@@ -178,15 +178,16 @@
         </section>
         <!-- Portfolio-->
         <div id="portfolio">
-            <h2 class="text-center mt-0">Technical Skills</h2>
+            <h2 class="text-center mt-0">Projects</h2>
+            <hr class="divider" />
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-6 col-sm-6">
                         <a class="portfolio-box" href="assets/img/projects/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="h2 project-category text-white-50">Application personal Budget Android</div>
+                                <div class="project-name">Application developed in Kottlin - Android to manage income, expenses, and personal balance. Allows additional, edit, delete transactions, and is multilingual. for details see the file "Demo.gif</div>
                             </div>
                         </a>
                     </div>
