--- a/index.html
+++ b/index.html
@@ -183,39 +183,47 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-6 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/1.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/1.gif" title="Application personal Budget Android">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="h2 project-category text-white-50">Application personal Budget Android</div>
                                 <div class="project-name">Application developed in Kottlin - Android to manage income, expenses, and personal balance. Allows additional, edit, delete transactions, and is multilingual. for details see the file "Demo.gif</div>
+                                <!-- <a href="https://github.com/jhondeiberd/Android/tree/jhondeiberd/FinalProject">Code</a> -->
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-6 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/2.jpg" title="Project Name">
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/2.jpg" title="Application full-stack Manager favorite music albums">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Application full-stack Manager favorite music albums</div>
+                                <div class="project-name">Development of a web application for the user to manage a list of favorites, searching, adding, and deleting. It was built with a back-end server using Node.js + Express for the REST APIs that manage the PostgreSQL database. The front-end server is a React.js that request the user 
+                                    requirements with RESTful APIs for the Discogs Music. My role in this project was developing 
+                                    the Backend part</div>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-lg-6 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/projects/thumbnails/4.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/3.jpg" title="MVC application for managing contacts">
+                            <img class="img-fluid" src="assets/img/projects/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">MVC application for managing contacts</div>
+                                <div class="project-name">Application developed in C# for contact management, a graphical interface that allows 
+                                    you to create new contacts, edit existing ones and delete them, these data are stored in text files. 
+                                    In this project worked. In this project we worked on distributing parts of the menu for the project. 
+                                    In this project, we distributed parts of the menu for the project, and each one coded and tested 
+                                    his part.</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-6 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/5.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/projects/thumbnails/5.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/4.jpg" title="Maintain ERP Database">
+                            <img class="img-fluid" src="assets/img/projects/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Maintain ERP Database</div>
+                                <div class="project-name">I Developed and programed in Transact-SQL to rebuild and reorganize indexes and 
+                                    update statistics, backups to maintain optimal performance of the company's ERP database.</div>
                             </div>
                         </a>
                     </div>
