--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#skills">Technical Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#studies">Training and certifications</a></li>
                         <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
