--- a/index.html
+++ b/index.html
@@ -361,7 +361,10 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Jhon Deiber Diaz Parra - (514) 3461672 - jhondeiberd@gmail.com</div></div>
+            <div class="col">
+                <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Jhon Deiber Diaz Parra - (514) 3461672 - jhondeiberd@gmail.com</div></div>
+
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
