--- a/index.html
+++ b/index.html
@@ -362,8 +362,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="col">
-                <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Jhon Deiber Diaz Parra - (514) 3461672 - jhondeiberd@gmail.com</div></div>
-
+                <div class="small text-center text-muted">Jhon Deiber Diaz Parra - (514) 3461672 - jhondeiberd@gmail.com</div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
