--- a/index.html
+++ b/index.html
@@ -304,6 +304,164 @@
             </div>
             </section><br>
 
+        <!-- experience-->
+        <section class="page-section" id="experience">
+            <!-- <div class="container px-4 px-lg-5"> -->
+                <h2 class="text-center mt-0">Technical Skills</h2>
+                <hr class="divider" />
+                <div class="container">
+                    <div class="main-timeline">
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">1 Years</span>
+                                        <span class="year">2022</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title">Landscaper</h5>
+                                <p>Boardwalk, Montréal QC, Canada</p>
+                                <p class="description">
+                                    Responsible for painting common areas of assigned buildings.
+                                    || Responsible for mowing the lawns around the buildings.
+                                    || Support the maintenance and concierges teams when necessary.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">3 Years</span>
+                                        <span class="year">2021</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title">Applications Manager ERP</h5>
+                                <p>Permoda, Bogotá - Colombia</p>
+                                <p class="description">
+                                    Implemented agile methodologies for the execution and follow-up of projects and developments in Dynamics ERP.
+                                    || Supported my team with debugging code in the Dynamics ERP AOT for bug fixes.
+                                    || Developed database queries for incident resolution and analysis.
+                                    || Collaborated with product managers and third parties to identify and resolve issues coordinated system requirements, and created project schedules.
+                                    || Planned and executed annual budget for ERP improvement.
+                                    || Planned, implemented and supervised IT technology solutions to ensure satisfactory fulfillment of end-user requirements, implementation and support in a productive environment.
+                                    || Coordinated the development of virtual training material for the users’ application
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">9 Years</span>
+                                        <span class="year">2017</span>  
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title">Applications Professional ERP</h5>
+                                <p>Permoda, Bogotá - Colombia</p>
+                                <p class="description">
+                                    Escalated problems to the Technical Specialist Level third or above within the support structure.
+                                    || Led the definition and formation of plans for applications aimed to master users’ knowledge.
+                                    || Performed test runs for approval and implementation of developments in a production environment.
+                                    || Enhanced and maintained ERP functionalities and execute upcoming projects.
+                                    || Implemented and deployed ERP's standard modules and local functionalities.
+                                    || Optimized processes and procedures in the ERP
+                                    || Developed virtual training material amended to extend the ERP modules.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">2 Years</span>
+                                        <span class="year">2008</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title">Production Planning Analyst</h5>
+                                <p>Permoda, Bogotá - Colombia</p>
+                                <p class="description">
+                                    Implemented Material Requirements Planning (MRP) methodology for product production
+                                    || Designed and configured technical sheets and spreadsheets for clothing products.
+                                    || Calculated the manufacturing route and the cost of the bill of materials for the garments.
+                                    || Applied engineering industrialization methods and plans to improve the manufacturing process to optimize operating costs.
+                                    || Optimized raw material inventories and allocation based on collection designs.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">3 Years</span>
+                                        <span class="year">2006</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title">Production Engineering Analyst</h5>
+                                <p>Permoda, Bogotá - Colombia</p>
+                                <p class="description">
+                                    Designed and enhance workload balancing for production plants.
+                                    || Implemented engineering methods and time analysis for the plans' workstations.
+                                    || Prepared operational listings for garments products.
+                                    || Designed and implement standards time for garments operations.
+                                    || Identified and improved bottlenecks for production modules.
+                                    || Prepared efficiency reports and control the unproductive time of the plant.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                        <span class="month">Start</span>
+                                        <span class="year">2003</span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+                    </div>
+                </div>
+            <!-- </div> -->
+            <div class="align-self-baseline text-center">
+                <a class="btn btn-primary btn-xl" href="#portfolio">Projects</a>
+            </div>
+            </section><br>
+
+
+
         <!-- Portfolio-->
         <div id="portfolio">
             <div class="container-fluid p-0">
