--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <h3 class="h4 mb-2">Web</h3>
                                 <p >HTML5<br>CSS3<br>Node.js<br>React<br>Web services API</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="card">
@@ -128,7 +128,7 @@
                                 <h3 class="h4 mb-2">Programming languages</h3>
                                 <p >Java<br>Python<br>GO<br>C#<br>C++<br>PHP<br>JavaScript<br>Transact-SQL</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="card">
@@ -137,7 +137,7 @@
                                 <h3 class="h4 mb-2">Mobile technologies</h3>
                                 <p >Kotlin<br>Flutter</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="card">
@@ -146,7 +146,7 @@
                                 <h3 class="h4 mb-2">Control version</h3>
                                 <p >Git<br>GitHub<br>Bitbucket</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                 </div><br>
 
@@ -158,7 +158,7 @@
                                 <h3 class="h4 mb-2">Project management </h3>
                                 <p >Scrum<br>Kamban<br>Trello<br>Planner</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                     <div class="col-lg-4 col-md-4 text-center">
                         <div class="card">
@@ -167,7 +167,7 @@
                                 <h3 class="h4 mb-2">Database</h3>
                                 <p >SQL server<br>MySql<br>MariaBD<br>PostgreSQL</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card">
@@ -176,7 +176,7 @@
                                 <h3 class="h4 mb-2">Business management Software</h3>
                                 <p >ERP Microsoft Dynamics<br>WMS Arcante<br>PLM Porini<br>ICG POS</p>
                             </div>
-                        </div>
+                        </div><br>
                     </div>
                 </div><br>
                 <div class="align-self-baseline text-center">
@@ -196,8 +196,10 @@
                             <h4 class="text-white mt-0 text-center">Training</h4>
 
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://isi-mtl.com/es/course/programacion-y-tecnologias-web/"><img src="assets/img/projects\image/isi.jpg" /></a>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://isi-mtl.com/es/course/programacion-y-tecnologias-web/"><img src="assets/img/projects\image/isi.jpg" /></a>
+                                    </div>
                                 </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h5">Programmation et Technologies Web</div>
@@ -206,11 +208,14 @@
                                     <div class="h7">Montreal, Canada&emsp;&emsp;Feb 2021 - Present</div>
                                 </div>          
                             </div><br>
+
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="http://ingproduccion.udistrital.edu.co:8080/">
-                                        <img src="assets/img/projects\image/Distri.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="http://ingproduccion.udistrital.edu.co:8080/">
+                                            <img src="assets/img/projects\image/Distri.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h5">Production engineer</div>
                                     <div class="h7">Bachelor's Degree</div>
@@ -219,9 +224,11 @@
                                 </div>          
                             </div><br>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://www.linkedin.com/in/fundacion-cidca-34b52a25/">
-                                    <img src="assets/img/projects\image/cidca.jpg" /></a>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://www.linkedin.com/in/fundacion-cidca-34b52a25/">
+                                            <img src="assets/img/projects\image/cidca.jpg" /></a>
+                                    </div>
                                 </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h5">Industrial technology</div>
@@ -235,10 +242,12 @@
                         <div class="col">
                             <h4 class="text-white mt-0 text-center">Certifications</h4>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://capacitateparaelempleo.org/pages.php?r=.tema&tagID=15840">
-                                    <img src="assets/img/projects\image/slim.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://capacitateparaelempleo.org/pages.php?r=.tema&tagID=15840">
+                                            <img src="assets/img/projects\image/slim.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h6">Object-oriented programming paradigm</div>
                                     <div class="h8">Fundación Carlos Slim&emsp;&emsp;Online</div>
@@ -247,10 +256,12 @@
                                 </div>          
                             </div><br>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://www.lourtec.com/">
-                                    <img src="assets/img/projects\image/lourtec.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://www.lourtec.com/">
+                                            <img src="assets/img/projects\image/lourtec.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h6">Analyzing and Visualizing Data with Microsoft Power BI</div>
                                     <div class="h8">Microsoft Certified Solutions Associate (MCSA)</div>
@@ -259,10 +270,12 @@
                                 </div>          
                             </div><br>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://lourtec.com/cursos/microsoft/base-de-datos/20762-desarrollando-bases-de-datos-sql">
-                                    <img src="assets/img/projects\image/lourtec.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://lourtec.com/cursos/microsoft/base-de-datos/20762-desarrollando-bases-de-datos-sql">
+                                            <img src="assets/img/projects\image/lourtec.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h6">SQL Database Development</div>
                                     <div class="h8">Microsoft Certified Solutions Associate (MCSA)</div>
@@ -271,10 +284,12 @@
                                 </div>          
                             </div><br>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://www.lourtec.com/cursos/microsoft/desarrollo-de-software">
-                                    <img src="assets/img/projects\image/lourtec.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://www.lourtec.com/cursos/microsoft/desarrollo-de-software">
+                                            <img src="assets/img/projects\image/lourtec.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h6">Developing applications Web C# - ASP.NET Core MVC</div>
                                     <div class="h8">Microsoft Certified Solutions Associate (MCSA)</div>
@@ -283,10 +298,12 @@
                                 </div>          
                             </div><br>
                             <div class="row text-white">
-                                <div class="col-md-2 text-center">
-                                    <a href="https://capacitateparaelempleo.org/pages.php?r=.tema&tagID=4066">
-                                    <img src="assets/img/projects\image/slim.jpg" /></a>
-                                </div>
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://capacitateparaelempleo.org/pages.php?r=.tema&tagID=4066">
+                                            <img src="assets/img/projects\image/slim.jpg" /></a>
+                                        </div>
+                                    </div>
                                 <div class="col-md-9 text-left">
                                     <div class="h6">Database Administrator (DBA)</div>
                                     <div class="h8">Fundación Carlos Slim&emsp;&emsp;Online</div>
@@ -651,23 +668,30 @@
                                     <!-- an error submitting the form-->
                                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                                     <!-- Submit Button-->
-                                    <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div>
+                                    <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div><br>
+                                    <div class="align-self-baseline text-center">
+                                        <a class="btn btn-primary btn-xl" href="#page-top">Start</a>
+                                    </div>
                                 </form>
                             </div>
                         </div>
-                    </div>
-                    
+                    </div>  
                 </div>
-            </div>
-            <div class="align-self-baseline text-center">
-                <a class="btn btn-primary btn-xl" href="#page-top">Start</a>
             </div>
         </section>
 
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="col">
-                <div class="small text-center text-muted">Jhon Deiber Diaz Parra - (514) 3461672 - jhondeiberd@gmail.com</div>
+            <div class="row text-center">
+                <div class="col">
+                    <span class="small text-center text-muted">Jhon Deiber Diaz Parra</span>
+                </div>
+                <div class="col">
+                    <span class="small text-center text-muted">(514) 3461672</span>
+                </div>
+                <div class="col">
+                    <span class="small text-center text-muted">jhondeiberd@gmail.com</span>
+                </div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
