--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="box">
                                 <div class="bi-globe fs-1 text-white"></div>
                                 <h3 class="h4 mb-2">Web</h3>
-                                <p >HTML5<br>CSS3<br>Node.js<br>React<br>Web services API</p>
+                                <p >HTML5<br>CSS3<br>Node.js<br>React.js<br>Web services API</p>
                             </div>
                         </div><br>
                     </div>
@@ -220,7 +220,7 @@
                                     <div class="h5">Production engineer</div>
                                     <div class="h7">Bachelor's Degree</div>
                                     <div class="h7">Universidad Distrital Francisco José de Caldas</div>
-                                    <div class="h7">Bogota, Colombia&emsp;&emsp;2008 - 2013</div>
+                                    <div class="h7">Bogotá, Colombia&emsp;&emsp;2008 - 2013</div>
                                 </div>          
                             </div><br>
                             <div class="row text-white">
@@ -233,8 +233,8 @@
                                 <div class="col-md-9 text-left">
                                     <div class="h5">Industrial technology</div>
                                     <div class="h7">Diploma of Vocational Studies</div>
-                                    <div class="h7">Fundacion Cidca</div>
-                                    <div class="h7">Bogota, Colombia&emsp;&emsp;2002 - 2005</div>
+                                    <div class="h7">Fundación Cidca</div>
+                                    <div class="h7">Bogotá, Colombia&emsp;&emsp;2002 - 2005</div>
                                 </div>          
                             </div><br>
                         </div>
@@ -317,14 +317,14 @@
                 </div><br>
             </div>
             <div class="align-self-baseline text-center">
-                <a class="btn btn-primary btn-xl" href="#portfolio">Projects</a>
+                <a class="btn btn-primary btn-xl" href="#experience">Experience</a>
             </div>
             </section><br>
 
         <!-- experience-->
         <section class="page-section" id="experience">
             <!-- <div class="container px-4 px-lg-5"> -->
-                <h2 class="text-center mt-0">Technical Skills</h2>
+                <h2 class="text-center mt-0">Professional experiences</h2>
                 <hr class="divider" />
                 <div class="container">
                     <div class="main-timeline">
@@ -344,8 +344,8 @@
                                 <p>Boardwalk, Montréal QC, Canada</p>
                                 <p class="description">
                                     Responsible for painting common areas of assigned buildings.
-                                    || Responsible for mowing the lawns around the buildings.
-                                    || Support the maintenance and concierges teams when necessary.
+                                    <b>||</b> Responsible for mowing the lawns around the buildings.
+                                    <b>||</b> Support the maintenance and concierges teams when necessary.
                                 </p>
                             </div>
                         </div>
@@ -367,12 +367,12 @@
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
                                     Implemented agile methodologies for the execution and follow-up of projects and developments in Dynamics ERP.
-                                    || Supported my team with debugging code in the Dynamics ERP AOT for bug fixes.
-                                    || Developed database queries for incident resolution and analysis.
-                                    || Collaborated with product managers and third parties to identify and resolve issues coordinated system requirements, and created project schedules.
-                                    || Planned and executed annual budget for ERP improvement.
-                                    || Planned, implemented and supervised IT technology solutions to ensure satisfactory fulfillment of end-user requirements, implementation and support in a productive environment.
-                                    || Coordinated the development of virtual training material for the users’ application
+                                    <b>||</b> Supported my team with debugging code in the Dynamics ERP AOT for bug fixes.
+                                    <b>||</b> Developed database queries for incident resolution and analysis.
+                                    <b>||</b> Collaborated with product managers and third parties to identify and resolve issues coordinated system requirements, and created project schedules.
+                                    <b>||</b> Planned and executed annual budget for ERP improvement.
+                                    <b>||</b> Planned, implemented and supervised IT technology solutions to ensure satisfactory fulfillment of end-user requirements, implementation and support in a productive environment.
+                                    <b>||</b> Coordinated the development of virtual training material for the users’ application
                                 </p>
                             </div>
                         </div>
@@ -394,12 +394,12 @@
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
                                     Escalated problems to the Technical Specialist Level third or above within the support structure.
-                                    || Led the definition and formation of plans for applications aimed to master users’ knowledge.
-                                    || Performed test runs for approval and implementation of developments in a production environment.
-                                    || Enhanced and maintained ERP functionalities and execute upcoming projects.
-                                    || Implemented and deployed ERP's standard modules and local functionalities.
-                                    || Optimized processes and procedures in the ERP
-                                    || Developed virtual training material amended to extend the ERP modules.
+                                    <b>||</b> Led the definition and formation of plans for applications aimed to master users’ knowledge.
+                                    <b>||</b> Performed test runs for approval and implementation of developments in a production environment.
+                                    <b>||</b> Enhanced and maintained ERP functionalities and execute upcoming projects.
+                                    <b>||</b> Implemented and deployed ERP's standard modules and local functionalities.
+                                    <b>||</b> Optimized processes and procedures in the ERP
+                                    <b>||</b> Developed virtual training material amended to extend the ERP modules.
                                 </p>
                             </div>
                         </div>
@@ -421,10 +421,10 @@
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
                                     Implemented Material Requirements Planning (MRP) methodology for product production
-                                    || Designed and configured technical sheets and spreadsheets for clothing products.
-                                    || Calculated the manufacturing route and the cost of the bill of materials for the garments.
-                                    || Applied engineering industrialization methods and plans to improve the manufacturing process to optimize operating costs.
-                                    || Optimized raw material inventories and allocation based on collection designs.
+                                    <b>||</b> Designed and configured technical sheets and spreadsheets for clothing products.
+                                    <b>||</b> Calculated the manufacturing route and the cost of the bill of materials for the garments.
+                                    <b>||</b> Applied engineering industrialization methods and plans to improve the manufacturing process to optimize operating costs.
+                                    <b>||</b> Optimized raw material inventories and allocation based on collection designs.
                                 </p>
                             </div>
                         </div>
@@ -446,11 +446,11 @@
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
                                     Designed and enhance workload balancing for production plants.
-                                    || Implemented engineering methods and time analysis for the plans' workstations.
-                                    || Prepared operational listings for garments products.
-                                    || Designed and implement standards time for garments operations.
-                                    || Identified and improved bottlenecks for production modules.
-                                    || Prepared efficiency reports and control the unproductive time of the plant.
+                                    <b>||</b> Implemented engineering methods and time analysis for the plans' workstations.
+                                    <b>||</b> Prepared operational listings for garments products.
+                                    <b>||</b> Designed and implement standards time for garments operations.
+                                    <b>||</b> Identified and improved bottlenecks for production modules.
+                                    <b>||</b> Prepared efficiency reports and control the unproductive time of the plant.
                                 </p>
                             </div>
                         </div>
