--- a/index.html
+++ b/index.html
@@ -512,10 +512,10 @@
                 </div>
                 <div class="row g-0 justify-content-center">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/3.jpg" title="MVC application for managing contacts">
+                        <a class="portfolio-box" href="https://www.youtube.com/watch?v=_z84NNx6xZM" title="MVC application for management of contacts">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">MVC application for managing contacts</div>
+                                <div class="project-category text-white-50">MVC application for management of contacts</div>
                                 <div class="project-name">
                                     Application developed in C# for contact management, a graphical interface that allows 
                                     you to create new contacts, edit existing ones and delete them, these data are stored in text files. 
