--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/projects/fullsize/2.jpg" title="Application full-stack Manager favorite music albums">
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/2.mp4" title="Application full-stack Manager favorite music albums">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Application full-stack Manager favorite music albums</div>
@@ -512,7 +512,7 @@
                 </div>
                 <div class="row g-0 justify-content-center">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://www.youtube.com/watch?v=_z84NNx6xZM" title="MVC application for management of contacts">
+                        <a class="portfolio-box" href="assets/img/projects/fullsize/3.mp4" title="MVC application for management of contacts">
                             <img class="img-fluid" src="assets/img/projects/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">MVC application for management of contacts</div>
