--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                                     Application developed in Kottlin - Android to manage income, expenses, and personal balance. Allows additional, edit, delete transactions, and is multilingual.
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-xl" href="https://github.com/jhondeiberd/Android/tree/jhondeiberd/FinalProject">Code</a>
+                            <a class="btn btn-primary" href="https://github.com/jhondeiberd/Android/tree/jhondeiberd/FinalProject">Code</a>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -508,7 +508,7 @@
                                     the Backend part
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-xl" href="https://github.com/jhondeiberd/SoftStructure/tree/jhondeiberd/Final-project">Code</a>
+                            <a class="btn btn-primary" href="https://github.com/jhondeiberd/SoftStructure/tree/jhondeiberd/Final-project">Code</a>
                         </a>
                     </div>
                 </div>
@@ -526,7 +526,7 @@
                                     his part.
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-xl" href="https://github.com/jhondeiberd/C-Sharp-dev/tree/master/Wpf_Managing_Contacts">Code</a>
+                            <a class="btn btn-primary" href="https://github.com/jhondeiberd/C-Sharp-dev/tree/master/Wpf_Managing_Contacts">Code</a>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
